k8s/ingress/restauranty-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restauranty-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://2fik.diogohack.shop"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization,Content-Type"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  tls:
    - hosts:
        - 2fik.diogohack.shop
      secretName: restauranty-tls
  rules:
    - host: 2fik.diogohack.shop
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3001
          - path: /api/items
            pathType: Prefix
            backend:
              service:
                name: items-service
                port:
                  number: 3003
          - path: /api/discounts
            pathType: Prefix
            backend:
              service:
                name: discounts-service
                port:
                  number: 3002
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 80
